(style): epic animations

--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -1,5 +1,11 @@
 #intro {
   section {
     padding: 1rem;
+
+    p {
+      font-size: 3rem;
+      font-weight: bold;
+      padding: 0.5rem;
+    }
   }
 }
