(content): add content

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -4,5 +4,6 @@
 
 @import 'components/cursor';
 @import 'components/intro';
+@import 'components/history';
 @import 'components/poster';
 @import 'components/goldband';
