--- a/styles/utilities/_baseline.scss
+++ b/styles/utilities/_baseline.scss
@@ -12,6 +12,31 @@
   src: url('../../assets/delirium_bold.ttf');
 }
 
+@font-face {
+  font-family: 'art-nouveau';
+  src: url('../../assets/art_nouveau.ttf');
+}
+
+@font-face {
+  font-family: 'baroque';
+  src: url('../../assets/baroque.ttf');
+}
+
+@font-face {
+  font-family: 'middeleeuws';
+  src: url('../../assets/middeleeuws.ttf');
+}
+
+@font-face {
+  font-family: 'victorian';
+  src: url('../../assets/victorian.otf');
+}
+
+@font-face {
+  font-family: 'renaissance';
+  src: url('../../assets/renaissance.ttf');
+}
+
 // COLOR VARIABLES
 
 $black: black;
