--- a/styles/style.css
+++ b/styles/style.css
@@ -10,6 +10,31 @@
   src: url("../../assets/delirium_bold.ttf");
 }
 
+@font-face {
+  font-family: 'art-nouveau';
+  src: url("../../assets/art_nouveau.ttf");
+}
+
+@font-face {
+  font-family: 'baroque';
+  src: url("../../assets/baroque.ttf");
+}
+
+@font-face {
+  font-family: 'middeleeuws';
+  src: url("../../assets/middeleeuws.ttf");
+}
+
+@font-face {
+  font-family: 'victorian';
+  src: url("../../assets/victorian.otf");
+}
+
+@font-face {
+  font-family: 'renaissance';
+  src: url("../../assets/renaissance.ttf");
+}
+
 h1,
 h2,
 h3,
@@ -104,6 +129,44 @@ main {
   font-size: 3rem;
   font-weight: bold;
   padding: 0.5rem;
+}
+
+.history {
+  width: 80%;
+}
+
+.history .input-middeleeuwen {
+  font-family: 'middeleeuws';
+}
+
+.history .input-renaissance {
+  font-family: 'renaissance';
+}
+
+.history .input-barok {
+  font-family: 'baroque';
+}
+
+.history .input-sier {
+  font-family: 'victorian';
+}
+
+.history .input-artnouveau {
+  font-family: 'art-nouveau';
+}
+
+.history input {
+  font-size: 3rem;
+  margin: 2rem auto;
+  border: none;
+  -webkit-box-shadow: 0 1.5px 0 black;
+          box-shadow: 0 1.5px 0 black;
+  max-width: 100%;
+  max-height: 4rem;
+}
+
+.history input:focus {
+  outline: 2px dotted black;
 }
 
 #poster {
