(style): color changes

--- a/styles/components/_cursor.scss
+++ b/styles/components/_cursor.scss
@@ -12,14 +12,14 @@
 
 .cursor-dot {
   $size: 0.5rem;
-  background-color: rgba($black, 0.7);
+  background-color: rgba($pink, 0.7);
   width: $size;
   height: $size;
 }
 
 .cursor-dot-outline {
   $size: 2rem;
-  background-color: rgba($black, 0.3);
+  background-color: rgba($blue, 0.3);
   width: $size;
   height: $size;
 }
