--- a/styles/utilities/_baseline.scss
+++ b/styles/utilities/_baseline.scss
@@ -75,3 +75,11 @@ li {
 ::selection {
   background-color: rgba($pink, 0.3);
 }
+
+.normal-font {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+ul {
+  list-style: none;
+}
