--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,14 @@ li {
   background-color: rgba(229, 75, 107, 0.3);
 }
 
+.normal-font {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+ul {
+  list-style: none;
+}
+
 *,
 *::after,
 *::before {
@@ -110,6 +118,10 @@ main {
   width: 100%;
 }
 
+.logo-delirium {
+  width: 100%;
+}
+
 .cursor-dot,
 .cursor-dot-outline {
   position: absolute;
@@ -138,12 +150,61 @@ main {
   height: 2rem;
 }
 
+#intro {
+  /* Apply the autoplay animation */
+}
+
+#intro .overflow-hidden {
+  overflow: hidden;
+  max-width: 100vw;
+}
+
+#intro .beer-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 5rem;
+  -webkit-animation: autoplay 45s linear infinite;
+          animation: autoplay 45s linear infinite;
+}
+
+#intro img {
+  height: 20rem;
+}
+
+@-webkit-keyframes autoplay {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+}
+
+@keyframes autoplay {
+  0% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+  100% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+}
+
+#intro .carousel-container.play ul.beer-row {
+  -webkit-animation: autoplay 10s linear infinite;
+          animation: autoplay 10s linear infinite;
+}
+
 #intro section {
   padding: 1rem;
 }
 
 #intro section p {
-  font-size: 3rem;
+  font-size: 1.5rem;
   font-weight: bold;
   padding: 0.5rem;
 }
@@ -187,7 +248,6 @@ main {
   -webkit-box-shadow: 0 1.5px 0 black;
           box-shadow: 0 1.5px 0 black;
   max-width: 100%;
-  max-height: 4rem;
 }
 
 .history input:focus {
