(fix): fix die font

--- a/styles/utilities/_baseline.scss
+++ b/styles/utilities/_baseline.scss
@@ -3,38 +3,38 @@
 @font-face {
   font-family: 'delirium';
   font-weight: normal;
-  src: url('../../assets/delirium.ttf');
+  src: url('../assets/delirium.ttf');
 }
 
 @font-face {
   font-family: 'delirium';
   font-weight: bold;
-  src: url('../../assets/delirium_bold.ttf');
+  src: url('../assets/delirium_bold.ttf');
 }
 
 @font-face {
   font-family: 'art-nouveau';
-  src: url('../../assets/art_nouveau.ttf');
+  src: url('../assets/art_nouveau.ttf');
 }
 
 @font-face {
   font-family: 'baroque';
-  src: url('../../assets/baroque.ttf');
+  src: url('../assets/baroque.ttf');
 }
 
 @font-face {
   font-family: 'middeleeuws';
-  src: url('../../assets/middeleeuws.ttf');
+  src: url('../assets/middeleeuws.ttf');
 }
 
 @font-face {
   font-family: 'victorian';
-  src: url('../../assets/victorian.otf');
+  src: url('../assets/victorian.otf');
 }
 
 @font-face {
   font-family: 'renaissance';
-  src: url('../../assets/renaissance.ttf');
+  src: url('../assets/renaissance.ttf');
 }
 
 // COLOR VARIABLES
