--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -1,4 +1,12 @@
 #intro {
+  .word {
+    margin: auto;
+    color: rgb(0, 0, 0);
+    font-size: 4rem;
+    width: 100vw;
+    height: 4rem;
+  }
+
   .overflow-hidden {
     overflow: hidden;
     max-width: 100vw;
