--- a/styles/style.css
+++ b/styles/style.css
@@ -154,6 +154,14 @@ main {
   /* Apply the autoplay animation */
 }
 
+#intro .word {
+  margin: auto;
+  color: black;
+  font-size: 4rem;
+  width: 100vw;
+  height: 4rem;
+}
+
 #intro .overflow-hidden {
   overflow: hidden;
   max-width: 100vw;
@@ -374,12 +382,5 @@ main {
   100% {
     text-indent: -5.25rem;
   }
-}
-
-.word {
-  margin: auto;
-  color: black;
-  font: normal 2.5em 'Delirium';
-  text-shadow: 5px 2px #222324, 2px 4px #222324, 3px 5px #222324;
 }
 /*# sourceMappingURL=style.css.map */
