--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,4 +5,7 @@
 @import 'components/cursor';
 @import 'components/intro';
 @import 'components/history';
+@import 'components/kenmerken';
 @import 'components/poster';
+@import 'components/rotatingtext';
+@import 'components/voorbeelden';
