--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -1,10 +1,42 @@
 #intro {
+  z-index: 100;
+  position: relative;
+
   .word {
     margin: auto;
     color: rgb(0, 0, 0);
     font-size: 4rem;
     width: 100vw;
     height: 4rem;
+    padding-bottom: 15rem;
+
+    &::before {
+      content: '';
+      background-color: $pink;
+      width: 100%;
+      height: 2rem;
+      left: 0;
+      position: absolute;
+      top: 16rem;
+      animation: border-breathing 3.5s linear infinite;
+    }
+
+    @keyframes border-breathing {
+      0% {
+        transform: scaleY(1);
+      }
+
+      50% {
+        transform: scaleY(2);
+      }
+
+      100% {
+        transform: scaleY(1);
+      }
+    }
+
+    @media (min-width: $md) {
+    }
   }
 
   .overflow-hidden {
@@ -16,6 +48,7 @@
     display: flex;
     gap: 5rem;
     animation: autoplay 45s linear infinite;
+    margin: 6rem 0;
   }
 
   img {
