--- a/styles/layouts/_layout.scss
+++ b/styles/layouts/_layout.scss
@@ -9,6 +9,10 @@
   padding: 0;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 .sr-only {
   clip: rect(0, 0, 0, 0);
   position: absolute;
@@ -24,12 +28,28 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+
+  @media (min-width: $md) {
+    margin-left: 20rem;
+    border-left: 10rem solid $pink;
+
+    &::before {
+      content: '';
+      position: fixed;
+      background-color: $blue;
+      height: 100%;
+      width: 14rem;
+      left: 0;
+      top: 0;
+    }
+  }
 }
 
 .bg {
   display: flex;
   justify-content: center;
-  background-color: $black;
+  background-color: $dark-blue;
   width: 100%;
 }
 
