--- a/styles/components/_intro.scss
+++ b/styles/components/_intro.scss
@@ -19,6 +19,9 @@
       position: absolute;
       top: 16rem;
       animation: border-breathing 3.5s linear infinite;
+      @media (min-width: $md) {
+        display: none;
+      }
     }
 
     @keyframes border-breathing {
