(style): add bg animation

--- a/styles/components/_kenmerken.scss
+++ b/styles/components/_kenmerken.scss
@@ -1,4 +1,11 @@
 #kenmerken {
   width: 80%;
   margin: 5rem 0;
+
+  .letters {
+    margin-bottom: 5rem;
+    p {
+      font-size: 4rem;
+    }
+  }
 }
