--- a/styles/utilities/_baseline.scss
+++ b/styles/utilities/_baseline.scss
@@ -72,6 +72,12 @@ h2 {
   font-size: 3rem;
 }
 
+.trip {
+  h2 {
+    animation: breathing-xy 3s infinite linear;
+  }
+}
+
 p,
 li {
   font-size: 1.75rem;
@@ -116,7 +122,7 @@ ul {
 
 // ANIMATIONS
 
-@keyframes border-breathing {
+@keyframes breathing {
   0% {
     transform: scaleY(1);
   }
@@ -127,5 +133,28 @@ ul {
 
   100% {
     transform: scaleY(1);
+  }
+}
+
+@keyframes breathing-xy {
+  0% {
+    transform: scale(1);
+    transform-origin: center left;
+  }
+
+  50% {
+    transform: scale(2);
+    transform-origin: center left;
+  }
+
+  100% {
+    transform: scale(1);
+    transform-origin: center left;
+  }
+}
+
+@keyframes turn {
+  to {
+    transform: rotate(1turn);
   }
 }
