(style): ja echt bijna klaar hoop ik

--- a/styles/layouts/_background.scss
+++ b/styles/layouts/_background.scss
@@ -111,3 +111,9 @@
     opacity: 0;
   }
 }
+
+// body {
+//   background-image: url(../../img/bg.jpg);
+//   background-attachment: fixed;
+//   background-size: cover;
+// }
