--- a/styles/style.scss
+++ b/styles/style.scss
@@ -3,6 +3,7 @@
 @import 'layouts/background';
 @import 'layouts/layout';
 
+@import 'components/bronvermelding';
 @import 'components/cursor';
 @import 'components/intro';
 @import 'components/history';
