--- a/styles/components/_kenmerken.scss
+++ b/styles/components/_kenmerken.scss
@@ -2,6 +2,14 @@
   width: 80%;
   margin: 5rem 0;
 
+  h2 {
+    margin-bottom: 2rem;
+  }
+
+  li {
+    margin: 2rem 0;
+  }
+
   .letters {
     margin-bottom: 5rem;
     p {
